--- a/Login/style.css
+++ b/Login/style.css
@@ -10,7 +10,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4070f4;
+  background: #f5f493;
 }
 .wrapper{
   position: relative;
@@ -35,7 +35,7 @@ body{
   height: 3px;
   width: 28px;
   border-radius: 12px;
-  background: #4070f4;
+  background: #f5f493;
 }
 .wrapper form{
   margin-top: 30px;
@@ -59,7 +59,7 @@ form .input-box input{
 }
 .input-box input:focus,
 .input-box input:valid{
-  border-color: #4070f4;
+  border-color: #f5f493;
 }
 form .policy{
   display: flex;
@@ -75,7 +75,7 @@ form h3{
   color: #fff;
   letter-spacing: 1px;
   border: none;
-  background: #4070f4;
+  background: #f5f493;
   cursor: pointer;
 }
 .input-box.button input:hover{
@@ -87,7 +87,7 @@ form .text h3{
  text-align: center;
 }
 form .text h3 a{
-  color: #4070f4;
+  color: #f5f493;
   text-decoration: none;
 }
 form .text h3 a:hover{
