--- a/Login/style.css
+++ b/Login/style.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   height: 100vh;
   padding: 15px;
-  background: #1abc9c;
+  background: #946762;
   overflow: hidden;
 }
 
@@ -28,7 +28,7 @@ body {
 
 .wrapper .title {
   height: 120px;
-  background: #16a085;
+  background: #946762;
   border-radius: 5px 5px 0 0;
   color: #fff;
   font-size: 30px;
@@ -60,7 +60,7 @@ body {
 }
 
 form .row input:focus {
-  border-color: #16a085;
+  border-color: #946762;
 }
 
 form .row input::placeholder {
@@ -73,8 +73,8 @@ form .row input::placeholder {
   height: 100%;
   color: #fff;
   font-size: 22px;
-  background: #16a085;
-  border: 1px solid #16a085;
+  background: #946762;
+  border: 1px solid #946762;
   border-radius: 5px 0 0 5px;
   display: flex;
   align-items: center;
@@ -101,13 +101,13 @@ form .row input::placeholder {
   font-size: 20px;
   font-weight: 500;
   padding-left: 0px;
-  background: #16a085;
-  border: 1px solid #16a085;
+  background: #946762;
+  border: 1px solid #946762;
   cursor: pointer;
 }
 
 form .button input:hover {
-  background: #12876f;
+  background: #946762;
 }
 
 .wrapper form .signup-link {
@@ -117,7 +117,7 @@ form .button input:hover {
 }
 
 .wrapper form .signup-link a {
-  color: #16a085;
+  color: #946762;
   text-decoration: none;
 }
 
